# CoPal

./: .gitignore  LICENSE  README.md  README_CN.md  RELEASING.md  pyproject.toml  pytest.ini
.copal/artifacts/: todo.json
copal_cli/: __init__.py  cli.py  init.py  validator.py
copal_cli/adapters/: base.py  claude.py  codex.py  gemini.py
copal_cli/config/: manifest.py  pack.py
copal_cli/fs/: paths.py  writer.py
copal_cli/harness/: agent_manager.py  export.py  init.py  session.py  skill.py  status.py  validate.py
copal_cli/memory/: __init__.py  branch_manager.py  cli_commands.py  config.py  integration.py  json_store.py  models.py  networkx_store.py  query.py  scope.py  sqlite_store.py  store_interface.py
copal_cli/skills/: __init__.py  commands.py  executor.py  registry.py  scaffold.py  selector.py
copal_cli/skills/sandbox/: __init__.py  local.py
copal_cli/stages/: __init__.py  analyze.py  commit.py  implement.py  plan.py  review.py  spec.py
copal_cli/system/: __init__.py  fs.py  hooks.py  mcp.py  prompt_builder.py  resume.py  status.py
copal_cli/templates/base/: AGENTS.md  UserAgents.md
copal_cli/templates/init/: UserAgents.md
copal_cli/templates/skill-scaffold/: CHANGELOG.md.jinja
copal_cli/templates/skills/: SKILL.md.jinja
copal_cli/templates/v1/: manifest.yaml
copal_cli/worktree/: commands.py  git_utils.py  sync.py
docs/: CHANGELOG.md  DEVELOPMENT.md  FEATURES.md  FEATURES_CN.md  HOOKS.md  LICENSE_COMPARISON.md  QUICKSTART.md  QUICKSTART_CN.md  USAGE.md  USAGE_CN.md  new_feature.md  review_findings.md
examples/project-customization/: README.md
examples/project-customization/knowledge-base/: README.md
examples/project-customization/prompts/: README.md
temp_harness_verify/.copal/: manifest.yaml
test_manager_rich/: UserAgents.md
test_manager_rich/.copal/: manifest.yaml
test_skill_box_v2/.copal/: manifest.yaml
tests/: __init__.py  manual_verify.py  test_adapters_claude.py  test_branch_manager.py  test_cli.py  test_config_manifest.py  test_config_pack.py  test_fs_paths.py  test_fs_writer.py  test_git_utils.py  test_harness.py  test_harness_export.py  test_harness_init.py  test_harness_status.py  test_harness_validate.py  test_init.py  test_memory.py  test_memory_cli.py  test_memory_config.py  test_session.py  test_stages.py  test_system.py  test_validator.py  test_worktree.py  test_worktree_sync.py
tests/integration/: test_skill_executor.py
tests/memory/: test_networkx_store.py
tests/skills/: __init__.py  test_cli_skill.py  test_registry.py  test_scaffold.py  test_selector.py
(+87 files in other folders)
